--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,9 +1,17 @@
-.search-form {
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
   height: 70px;
+  background-color: rgb(158, 107, 151);
+}
+
+.search-form {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(158, 107, 151);
 }
 
 input {
@@ -11,31 +19,36 @@ input {
   height: 35px;
   padding-left: 10px;
   padding-top: 10px;
+  padding-right: 0;
   padding-bottom: 10px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  border: 1px solid #eee;
+  border: 1px solid rgb(202, 132, 190);
   border-right: none;
-  transition: border-color 250ms linear;
+  transition: border-color 250ms linear, transform 250ms linear;
 
   &:focus {
-    border-color: rgb(172, 76, 159);
+    border-color: rgb(117, 38, 107);
+    transform: scale(1.03);
   }
 }
 
-button {
+.form-button {
   height: 35px;
   width: 35px;
-  border: 1px solid #eee;
+  padding: 0;
+  border: 1px solid rgb(202, 132, 190);
   border-left: none;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   background-color: rgb(235, 211, 243);
   cursor: pointer;
-  transition: border-color 250ms linear, background-color 250ms linear;
+  transition: border-color 250ms linear, background-color 250ms linear,
+    transform 250ms linear;
 
   input:focus + & {
-    border-color: rgb(172, 76, 159);
+    border-color: rgb(117, 38, 107);
+    transform: scale(1.03);
   }
 
   &:hover,
