--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
   display: none;
+  align-items: center;
+  justify-content: center;
   height: 80px;
   width: 100%;
   padding: 30px 0;
@@ -7,10 +9,6 @@
 }
 
 .footer-text {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   margin-top: 0;
   margin-bottom: 0;
   color: #fff;
@@ -18,4 +16,8 @@
 
 .footer-icon {
   fill: #fff;
+}
+
+.footer-link {
+  line-height: 0;
 }
