--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -5,3 +5,20 @@
   gap: 20px;
   margin-top: 100px;
 }
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.gallery-link {
+  text-decoration: none;
+  color: inherit;
+}
