--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,7 +1,11 @@
+.container {
+  margin-left: 13px;
+  margin-right: 13px;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 20px;
   margin-top: 100px;
 }
@@ -21,4 +25,14 @@
 .gallery-link {
   text-decoration: none;
   color: inherit;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: transform 250ms linear, box-shadow 250ms linear;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.03);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15), 0px 4px 8px rgba(0, 0, 0, 0.12),
+      1px 4px 8px rgba(0, 0, 0, 0.2);
+  }
 }
