--- a/src/sass/_loadMoreBtn.scss
+++ b/src/sass/_loadMoreBtn.scss
@@ -1,7 +1,7 @@
 .load-more {
   display: none;
   padding: 8px 15px;
-  margin: 30px auto;
+  margin: 30px auto 0 auto;
   border-radius: 5px;
   border: none;
   cursor: pointer;
