--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,18 +1,40 @@
 .container {
-  margin-left: 13px;
-  margin-right: 13px;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 899px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 900px) and (max-width: 1199px) {
+    width: 900px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 100%;
+  }
 }
 
 .gallery {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  justify-content: center;
+  gap: 15px;
   margin-top: 100px;
 }
 
 .info {
   display: flex;
   justify-content: space-around;
+  padding: 10px;
+  font-size: 14px;
 }
 
 .info-item {
